crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_card_hangs_under_the_row_that_asked_for_it.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"> edit it                                                                       "
"                                                                                "
"⏺ Edit(src/lib.rs)                                                              "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Edit                                                                         │"
"│                                                                              │"
"│ Do you want to edit src/lib.rs?                                              │"
"│ ❯ 1. Yes                                                                     │"
"│   2. Yes, allow Edit(src/) during this session                               │"
"│   3. No, and tell bingo what to do differently (esc)                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"⏺ after 7                                                                       "
"                                                                                "
"⏺ after 8                                                                       "
"                                                                                "
"⏺ after 9                                                                       "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
