crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_child_that_needs_a_person_is_counted_on_the_status_line.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Permission · Edit · ↳ reviewer                                                  "
"  Edit src/lib.rs                                                               "
"                                                                                "
"❯ 1. Yes                                                                        "
"  2. Yes, for this session (Edit(src/))                                         "
"  3. No, and tell it what to do instead                                         "
"  enter to select · ↑/↓ to navigate · esc to deny                               "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 needs you (ctrl+g)                                                      fake-1"
