crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_completed_tool_shows_the_first_lines_of_its_output.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"✓ Read src/lib.rs                                                               "
"  ⎿  line 1                                                                     "
"     line 2                                                                     "
"     line 3                                                                     "
"     line 4                                                                     "
"     line 5                                                                     "
"     … +4 lines                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
