crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_failed_tool_and_a_failed_turn_are_both_red.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"⏺ Bash(cargo test)                                                              "
"  ⎿  exit 101                                                                   "
"                                                                                "
"⏺ no route to the provider                                                      "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
