crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_room_sits_in_the_list_s_own_column.snap
---
source: crates/bingo-surface-tui/src/view.rs
assertion_line: 1667
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"Sessions                                                      Rooms             "
"  ⏺ project   idle                                              #design  0 seats"
"❯ ⏺ reviewer  idle                                                              "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
